<resources>
    <string name="app_name">My Locations</string>
    <string name="my_locations">My Locations</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirmpass">confirm password</string>
    <string name="image_desc">Image of map with location markers</string>
    <string name="image_desc2">Image of upload icon</string>
    <string name="enter">Enter</string>
    <string name="title_activity_maps">Map</string>
    <string name="locationName">Location Name</string>
    <string name="desc">Description</string>
    <string name="menu">Restaurant Menu: \nItems Tried</string>
    <string name="entree">Entree</string>
    <string name="app">Appetizer</string>
    <string name="drink">Drink</string>
    <string name="dessert">Dessert</string>
    <string name="skip">Skip</string>
    <string name="images">Add Pictures</string>
    <string name="upload">Upload</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Are you sure you want to delete this?</string>
    <string name="action_settings">Settings</string>
</resources>
