<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayRest"
    android:background="#E7FFE7">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/restScroll"
            android:gravity="center|top"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/restName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationName"
                android:textSize="24sp"
                android:paddingBottom="20dp"/>

            <RatingBar
                android:id="@+id/restRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:isIndicator="true"
                android:theme="@style/RatingBar"
                android:paddingBottom="10dp"/>

            <ImageView
                android:id="@+id/restImg"
                android:layout_width="match_parent"
                android:layout_height="129dp"
                app:srcCompat="@drawable/upload_pic"
                android:contentDescription="@string/image_desc2"/>

            <TextView
                android:id="@+id/restDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/desc"
                android:textSize="20sp"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/restApp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app"
                    android:textSize="24sp"
                    android:gravity="center"/>

            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:id="@+id/restEntree">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/entree"
                    android:textSize="24sp"
                    android:gravity="center"/>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical"
                android:id="@+id/restDrink">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drink"
                    android:textSize="24sp"
                    android:gravity="center"/>
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/restDessert">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"
                    android:textSize="24sp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="backToMap"
                    android:text="@string/back" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>